--- a/SampleApp.API/appsettings.json
+++ b/SampleApp.API/appsettings.json
@@ -2,9 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.Authentication": "Debug"
     }
   },
  
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "TokenKey": "super key password for jwt token token token token token token token token " 
 }
