--- a/SampleApp.API/appsettings.Development.json
+++ b/SampleApp.API/appsettings.Development.json
@@ -2,12 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.AspNetCore.Authentication": "Debug"
+      "Microsoft.AspNetCore": "Warning"
     }
-  },
-  
-  "AllowedHosts": "*",
-  "TokenKey": "super key password for jwt token token token token token token token token " 
+  }
 }
-
